# ENIQ

./: CMakeLists.txt  README.md  all_in_one.cpp  eniq_data.db  eniq_test_summary.db  out.csv
.github/: copilot-instructions.md
.github/workflows/: pg-integration.yml  windows-ci.yml
csv_out_dir/: A20240821.0645-0700_B_12_051214_G.csv  A20240821.0645-0700_B_12_051214_G.csv.tmp.20936.70878266861100  csv_summary.json
csv_test_out/: csv_summary.csv  summary.json
csv_test_suffix_out/: csv_summary.csv  csv_summary.json  test.csv
csv_test_summary_out/: summary.csv  summary.json
data/: test.xml  test_ns.xml  test_p_attr.xml
scripts/: make_gz.ps1  watcher.ps1  watcher.sh
src/: db_writer.cpp  db_writer.h  logger.cpp  logger.h  main.cpp  query_db.cpp  xml_parser.cpp  xml_parser.h
tests/: print_qpi.cpp  test_clean_test_records.cpp  test_cli.cpp  test_csv_suffix_option.cpp  test_gz_parser.cpp  test_localization.cpp  test_parser.cpp  test_parser_ns.cpp  test_pg_integration.cpp  test_qpi_query.cpp  test_rebuild_indexes.cpp  test_summary_options.cpp
